changes to prevent the parameter description column from expanding (e.g. due to very long words in the content that cannot wrap).  the new behaviour is that the long content just spills into the adjacent column.

--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -44,6 +44,26 @@
     table {
         border-collapse: collapse;
         border-spacing: 0;
+       .param-name-col {
+          width: 100px; 
+          max-width: 100px;
+        }
+        .param-value-col {
+          width: 310px; 
+          max-width: 310px;
+        }
+        .param-description-col {
+          width: 200px; 
+          max-width: 200px;
+        }
+        .param-type-col {
+          width: 100px; 
+          max-width: 100px;
+        }
+        .param-data-type-col {
+          width: 220px; 
+          max-width: 230px;
+        }
         thead {
             tr {
                 th {
